# Violet

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  ReadMe.md  build.sh  buildall.sh
include/: RESPCommandHandler.hpp  RedisCommandHandler.hpp  RedisDB.hpp  RedisServer.hpp  Server.hpp  VioletDB.hpp
src/: RESPCommandHandler.cc  RedisCommandHandler.cc  RedisDB.cc  RedisServer.cc  Server.cc  VioletDB.cc  main.cc
